# Books

Programming Rust/Chapter 2 - Tour of Rust/actix-gcd/: Cargo.toml
Programming Rust/Chapter 2 - Tour of Rust/actix-gcd/src/: main.rs
Programming Rust/Chapter 2 - Tour of Rust/introduction/src/: main.rs
Programming Rust/Chapter 2 - Tour of Rust/mandelbrot/: Cargo.toml
Programming Rust/Chapter 2 - Tour of Rust/mandelbrot/src/: main.rs
